[gd_scene load_steps=13 format=2]

[ext_resource path="res://MundoEnd.gd" type="Script" id=1]
[ext_resource path="res://bolaFuego.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/piso1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/vacio.png" type="Texture" id=4]
[ext_resource path="res://Boton.tscn" type="PackedScene" id=5]
[ext_resource path="res://player.tscn" type="PackedScene" id=6]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 256, 0, 256, 256, 0, 256 )

[sub_resource type="TileSet" id=1]
0/name = "piso1.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "vacio.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 256, 256 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -0.981812, -4.05495, -23.9818, 15.945, -21.9818, 38.945, -15.9818, 76.945, -18.9818, 120.945, -23.9818, 147.945, -27.9818, 171.945, 24.0182, 169.945, 19.0182, 151.945, 14.0182, 120.945, 14.0182, 78.945, 14.0182, 40.945, 22.0182, 20.945, 10.0182, 4.94505 )

[sub_resource type="CircleShape2D" id=5]
radius = 20.8139

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 16.6665, -427.604, 0, 0, 0, 0, 690.15, -427.604, 0, 0, 0, 0, 1767.07, -427.604 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1624.25, 1001.64, 0, 0, 0, 0, 824.073, 1386.9, 0, 0, 0, 0, 188.336, 743.767, 0, 0, 0, 0, 1187.52, 733.783, 0, 0, 0, 0, 1618.51, 841.529, 0, 0, 0, 0, 211.477, 1354.9 )
}

[node name="MundoEnd" type="Node2D"]
script = ExtResource( 1 )
bolasFuego = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
use_parent_material = true
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( -65539, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0 )

[node name="boton" parent="." instance=ExtResource( 5 )]
position = Vector2( 2030.2, 747.57 )

[node name="player" parent="." instance=ExtResource( 6 )]
position = Vector2( 99.6339, 1113.66 )

[node name="LightOccluder2D2" type="LightOccluder2D" parent="player"]
occluder = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="player"]
position = Vector2( -0.206635, 194 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2D"]
position = Vector2( -2.30569, 5.58673 )
shape = SubResource( 5 )

[node name="tiempoBolasFuego" type="Timer" parent="."]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 16.6665, -427.604 )
rotation = 3.10485e-005

[node name="Path2D2" type="Path2D" parent="."]
position = Vector2( -2.71198, 18.1204 )
curve = SubResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2( 1624.25, 1001.64 )
rotation = 2.69281

[node name="tiempoCerrado" type="Timer" parent="."]
wait_time = 10.0
[connection signal="area_entered" from="player/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="tiempoBolasFuego" to="." method="_on_tiempoBolasFuego_timeout"]
[connection signal="timeout" from="tiempoCerrado" to="." method="_on_tiempoCerrado_timeout"]
